--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -18,5 +18,10 @@
     <h1>My Astro Site</h1>
     <h1>私のAstro学習ブログ</h1>
     <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+    <ul>
+      <li><a href="/posts/post-1/">記事1</a></li>
+      <li><a href="/posts/post-2/">記事2</a></li>
+      <li><a href="/posts/post-3/">記事3</a></li>
+    </ul>
   </body>
 </html>
