--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -13,7 +13,7 @@
   <body>
     <a href="/">ホーム</a>
     <a href="/about/">概要</a>
-	<a href="/blog">ブログ</a>
+    <a href="/blog">ブログ</a>
     <h1>My Astro Site</h1>
   </body>
 </html>
