--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -11,9 +13,12 @@ import "../styles/global.css";
     <title>Astro</title>
   </head>
   <body>
-    <a href="/">ホーム</a>
-    <a href="/about/">概要</a>
-    <a href="/blog">ブログ</a>
+    <Header />
     <h1>My Astro Site</h1>
+    <Footer />
+
+    <script>
+      import "../scripts/menu.ts";
+    </script>
   </body>
 </html>
